fixed issue with recipes filter gap

--- a/web/src/pages/recipes.module.scss
+++ b/web/src/pages/recipes.module.scss
@@ -37,11 +37,9 @@
   grid-template-columns: repeat(1, minmax(0,1fr));
 
   width: 100%;
-  margin-left: auto;
-  margin-right: auto;
 
-  // flex-flow: row wrap;
-  // flex: 0 1 auto;
+
+
   align-content: flex-start;
 
   padding-left: 0;
